--- a/pug/cabinet-create-news.pug
+++ b/pug/cabinet-create-news.pug
@@ -9,54 +9,54 @@ html
     
 		include default/header-black.pug
 		// header
+		.wrapper
+			.stub
 
-		.stub
+			.cabinet-all.main-grid
+				.cabinet-body
+					h2 Создание новости
+					.registration-hint Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.
 
-		.cabinet-all.main-grid
-			.cabinet-body
-				h2 Создание новости
-				.registration-hint Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.
-
-				.registration-body
-					.reg-line
-						label 
-							| Название новости:
-						input(type="text")
-					.reg-line
-						label 
-							| Описание:
-						textarea
-					.reg-line
-						label Добавить фото:
-						.btn-wc
-							a.btn.small.btn-file(href="#")
-								i
-								span Добвить
-					.reg-line
-						.added-files-container
-							.af-item
-								img.af-img(src="../images/1.jpg")
-								.af-name Namefile.jpg
-								i
-			.cabinet-side
-				.cabinet-info
-					h3 Ваш тарифный план
-					.ci-line
-						span Тариф:
-						span Тариф
-					.ci-line
-						span Оплачено до:
-						span 23.03.2020
-					.ci-line
-						span Осталось мероприятий:
-						span 23
-					.ci-line
-						span Ограничения по городу:
-						span Нет ограничений
-					.ci-line
-						span Активные мероприятия:
-						span 5
-			.btn-wc-bottom
-				input.btn.orange.btn-registration(type="submit" value="Добавить новость")
-				a(href="#").btn.orange-border.btn-registration Отменить
+					.registration-body
+						.reg-line
+							label 
+								| Название новости:
+							input(type="text")
+						.reg-line
+							label 
+								| Описание:
+							textarea
+						.reg-line
+							label Добавить фото:
+							.btn-wc
+								a.btn.small.btn-file(href="#")
+									i
+									span Добвить
+						.reg-line
+							.added-files-container
+								.af-item
+									img.af-img(src="../images/1.jpg")
+									.af-name Namefile.jpg
+									i
+				.cabinet-side
+					.cabinet-info
+						h3 Ваш тарифный план
+						.ci-line
+							span Тариф:
+							span Тариф
+						.ci-line
+							span Оплачено до:
+							span 23.03.2020
+						.ci-line
+							span Осталось мероприятий:
+							span 23
+						.ci-line
+							span Ограничения по городу:
+							span Нет ограничений
+						.ci-line
+							span Активные мероприятия:
+							span 5
+				.btn-wc-bottom
+					input.btn.orange.btn-registration(type="submit" value="Добавить новость")
+					a(href="#").btn.orange-border.btn-registration Отменить
 
