--- a/pug/cabinet-news.pug
+++ b/pug/cabinet-news.pug
@@ -9,47 +9,47 @@ html
     
 		include default/header-black.pug
 		// header
-
-		.stub
-		
-    
-		.cabinet-all.main-grid 
-			.cabinet-body
-				.cabinet-event 
-					h2 Заголовок размещенной новости в две или несколько строк
-					.cabinet-event-container
-						.ce-head
-							.ce-gallery
-								.gallery-main
-									img(src="../images/1.jpg")
-								.gallery-navigation
-									.g-prev
-									.g-next
-									.img-container
+		.wrapper
+			.stub
+			
+			
+			.cabinet-all.main-grid 
+				.cabinet-body
+					.cabinet-event 
+						h2 Заголовок размещенной новости в две или несколько строк
+						.cabinet-event-container
+							.ce-head
+								.ce-gallery
+									.gallery-main
 										img(src="../images/1.jpg")
-										img(src="../images/1.jpg")
-										img(src="../images/1.jpg")
-					
-						.ce-body 
-							ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh.
-			.cabinet-side
-				.auto-jsCalendar(data-language="ru")
-				.cabinet-info
-					h3 Ваш тарифный план
-					.ci-line
-						span Тариф:
-						span Тариф
-					.ci-line
-						span Оплачено до:
-						span 23.03.2020
-					.ci-line
-						span Осталось мероприятий:
-						span 23
-					.ci-line
-						span Ограничения по городу:
-						span Нет ограничений
-					.ci-line
-						span Активные мероприятия:
-						span 5
-			.btn-wc-bottom
-				a.btn.orange(href="#") Редактировать
+									.gallery-navigation
+										.g-prev
+										.g-next
+										.img-container
+											img(src="../images/1.jpg")
+											img(src="../images/1.jpg")
+											img(src="../images/1.jpg")
+						
+							.ce-body 
+								ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh.
+				.cabinet-side
+					.auto-jsCalendar(data-language="ru")
+					.cabinet-info
+						h3 Ваш тарифный план
+						.ci-line
+							span Тариф:
+							span Тариф
+						.ci-line
+							span Оплачено до:
+							span 23.03.2020
+						.ci-line
+							span Осталось мероприятий:
+							span 23
+						.ci-line
+							span Ограничения по городу:
+							span Нет ограничений
+						.ci-line
+							span Активные мероприятия:
+							span 5
+				.btn-wc-bottom
+					a.btn.orange(href="#") Редактировать
