--- a/pug/contacts-page.pug
+++ b/pug/contacts-page.pug
@@ -9,31 +9,31 @@ html
     
 		include default/header-black.pug
 		// header
+		.wrapper
+			.stub
+			h1.global.color Контакты
 
-		.stub
-		h1.global.color Контакты
-
-		.contacts-page.main-grid
-			.form
-				h2 Отправьте свой вопрос и мы ответим в ближайшее время
-				div
-					input(type="text" placeholder="Имя Фамилия*")
-					input(type="text" placeholder="Email")
-					input(type="text" placeholder="Телефон")
-					textarea
-					input.btn.orange(type="submit" value="Отправить")
-			.feedback 
-				h2 Или свяжитесь с нами любым удобным для вас способом
-				.phone +7 (999) 999-99-99 
-				.mail info@domain.com
-				.address
-					|г. Новосибирск
-					br
-					|ул. Улица, д. 99, оф. 212
-				.social
-					a(href="#")
-						img(src="../images/social/i-b-2.svg")
-					a(href="#")
-						img(src="../images/social/f-b.svg")
-					a(href="#")
-						img(src="../images/social/v-b-2.svg")
+			.contacts-page.main-grid
+				.form
+					h2 Отправьте свой вопрос и мы ответим в ближайшее время
+					div
+						input(type="text" placeholder="Имя Фамилия*")
+						input(type="text" placeholder="Email")
+						input(type="text" placeholder="Телефон")
+						textarea
+						input.btn.orange(type="submit" value="Отправить")
+				.feedback 
+					h2 Или свяжитесь с нами любым удобным для вас способом
+					.phone +7 (999) 999-99-99 
+					.mail info@domain.com
+					.address
+						|г. Новосибирск
+						br
+						|ул. Улица, д. 99, оф. 212
+					.social
+						a(href="#")
+							img(src="../images/social/i-b-2.svg")
+						a(href="#")
+							img(src="../images/social/f-b.svg")
+						a(href="#")
+							img(src="../images/social/v-b-2.svg")
