--- a/pug/default/header-black.pug
+++ b/pug/default/header-black.pug
@@ -19,4 +19,4 @@ header.header-black
         // mobile-menu
         include popup-account.pug
         // mobile-menu
-.hamburger.color
+.hamburger.color.element-btn(data-showEl="0")
