--- a/pug/default/popup-enter.pug
+++ b/pug/default/popup-enter.pug
@@ -1,9 +1,9 @@
+.popup-wrapper-blur.element-show(data-showEl="1")
 .popup-wrapper.element-show(data-showEl="1")
   .popup-container
     .pc-header
       .close
       h2 Вход в личный кабинет
-      p Если вы столкнулись с проблемой, или у вас есть вопрос по работе сервиса, а так же предложения, напишите нам.
     form.form
       input(type="text" placeholder="Ваше Логин")
       input(type="passwod" placeholder="Ваш пароль")
