--- a/pug/index.pug
+++ b/pug/index.pug
@@ -85,7 +85,7 @@ html
 					br
 					| на нашем сервисе
 				.event-container.owl-event.owl-carousel
-					each val in ["","","","","","","","",""]
+					each val in ["Curabitur lobortis id la. Quismet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectet","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus."]
 						.event-item
 							.ei-head
 								.data 
@@ -93,7 +93,8 @@ html
 									| 2 Июня 12:30
 								.category-name Категория мероприятия
 							h3 Заголовок размещенного мероприятия в несколько…
-							.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+							.description 
+								= val
 							.ei-footer
 								.place 
 									i
@@ -181,7 +182,7 @@ html
 								.item
 									h3 Структурированное представление мероприятий
 									.text Это платформа для организаторов и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. И людей мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей.
-						.slider-img
+						.slider-img.slider-img-page
 							img.page(src="../images/page.png")
 			//- .section-slider
 
