--- a/scss/sourse/_cabinet-all.scss
+++ b/scss/sourse/_cabinet-all.scss
@@ -148,7 +148,8 @@
   border-radius: 0 0 6px 6px;
   // -------
 
-  height: 100vh;
+  /*height: 100vh;*/
+  height: 100%;
   position: fixed;
   left: 74%;
   top: 0;
