--- a/scss/sourse/default/_default.scss
+++ b/scss/sourse/default/_default.scss
@@ -137,3 +137,13 @@ h2 {
 	margin: 0 auto;
 	display: block;
 }
+
+.wrapper,
+header {
+	transition: ease-out 0.25s;
+	filter: blur(0px);
+}
+
+.blur {
+	filter: blur(10px);
+}
