--- a/pug/default/mobile-menu.pug
+++ b/pug/default/mobile-menu.pug
@@ -11,4 +11,4 @@
         a(href="#")
           = val
   .btn-wc
-    a.btn.white-border(href="#") Войти
+    a.btn.white-border.element-btn(href="#" data-showEl="1") Войти
