--- a/pug/default/popup-account.pug
+++ b/pug/default/popup-account.pug
@@ -3,8 +3,11 @@
     img.accaunt-img(src="../images/face.jpg")
     h3 ООО "Лабиринт"
   .pc-nav
+    .pa-info
+      .name login
+      .mail  name@name.ru
     ul
-      each val in ["Редактировать профиль","Тариф","Помощь","Пункт меню","Выход"]
+      each val in ["Редактировать профиль","Помощь","Выход"]
         li
           a(href="#")
             = val
