--- a/pug/index.pug
+++ b/pug/index.pug
@@ -28,7 +28,7 @@ html
 							a.btn.white(href="#") Скачать в AppStore
 							a.btn.white(href="#") Скачать в PlayMarket
 					.mobile-box
-						img.shadow(src="../images/shadow.png" data-parallaxify-range-x="-100" data-parallaxify-range-y="-20") 
+						img.shadow(src="../images/shadow.png") 
 						img(src="../images/group.png") 
 			//- .section-text
 			.section-text
@@ -218,4 +218,7 @@ html
 								| Скачать в AppStore
 							a.btn.white.shadow(href="#")
 								| Скачать в PlayMarket
+						.create
+							| Дизайн, разработка сайта, разработка приложений: 
+							a(href="#") Expil International
 			//- .section-feedback
