--- a/scss/sourse/response/_mw998.scss
+++ b/scss/sourse/response/_mw998.scss
@@ -103,7 +103,7 @@ nav {
 /*main-page*/
 .main-section {
 
-  background-image: url(../images/main-section-mobile.png);
+  background-image: url(../images/Background-mobi.svg);
   text-align: center;
   background-position: bottom;
 
