--- a/css/response.css
+++ b/css/response.css
@@ -114,7 +114,7 @@
   /*mobile-menu*/
   /*main-page*/
   .main-section {
-    background-image: url(../images/main-section-mobile.png);
+    background-image: url(../images/Background-mobi.svg);
     text-align: center;
     background-position: bottom;
     height: 910px;
